# VibeGen

./: .claudeignore  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup-vibegen.ps1  spec.example.md  vibegen.ps1
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: researcher.md  reviewer.md
.claude/commands/analysis/: debug.md  explain.md  impact.md  map-repo.md  trace.md  why.md
.claude/commands/config/: effort.md
.claude/commands/docs/: changelog.md  doc-repo.md  doc.md  env.md
.claude/commands/feature/: add.md  extend.md  new-module.md  plan.md
.claude/commands/git/: amend.md  merge.md  pr.md  squash.md  status.md
.claude/commands/quality/: cleanup.md  dedupe.md  migrate.md  profile.md  refactor-module.md  refactor-repo.md  refactor.md  rename.md  review.md  simplify.md  standardize.md  type-fix.md
.claude/commands/test/: coverage.md  reproduce.md
.claude/hooks/: auto_lint.py  read_once.py  verify_on_stop.sh
.claude/skills/: code-style.md  project-layout.md  tech-stack.md
.github/workflows/: version-bump.yml
docs/reference/: README.md
examples/: spec.md
obsolete_win/: vibegen.ps1
obsolete_win/prompts/: system.txt  write_tests.txt
prompts/: generate_code.txt  plan.txt
scripts/: ollama_client.py  release.py
src/vibegen/: __init__.py  __main__.py  _analysis.py  _design.py  _improve_loop.py  _improve_metrics.py  _improve_state.py  _improve_webui.py  _io.py  _llm.py  _output_parser.py  _pipeline.py  _plan.py  _scaffold.py  _session.py  cli.py  ollama_client.py  sandbox.py  web_search.py
src/vibegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vibegen/prompts/: design_generate_spec.txt  design_interview.txt  design_update_spec.txt  fix_errors.txt  fix_tests.txt  generate_code.txt  improve_evaluate.txt  improve_tick.txt  plan.txt  plan_tests.txt  reviewer.txt  role_architect.txt  role_reviewer.txt  system.txt  write_tests.txt
test-projects/: spec-example-word-counter.md
tests/: test_analysis.py  test_design.py  test_improve_metrics.py  test_improve_state.py  test_improve_webui.py  test_io.py  test_ollama_direct.py  test_ollama_import.py  test_ollama_simple.py  test_output_parser.py  test_pipeline_helpers.py  test_read_once.py  test_sandbox.py  test_scaffold.py  test_vibegen_ollama.py  test_vibegen_ollama_debug.py  test_web_search.py
tmp_pytest/test_api_action_pause0/.vibegen/improve/: state.json
tmp_pytest/test_api_history0/.vibegen/improve/: state.json
tmp_pytest/test_api_logs_changelog0/.vibegen/improve/: state.json
tmp_pytest/test_api_note0/.vibegen/improve/: state.json
tmp_pytest/test_api_note_empty_rejected0/.vibegen/improve/: state.json
tmp_pytest/test_api_status0/.vibegen/improve/: state.json
tmp_pytest/test_api_task_update0/.vibegen/improve/: state.json
tmp_pytest/test_append_changelog_appends0/.vibegen/improve/: CHANGELOG.md
tmp_pytest/test_append_changelog_creates_0/.vibegen/improve/: CHANGELOG.md
tmp_pytest/test_build_dependency_graph_pr0/src/pkg/: mod.py
tmp_pytest/test_ensure_package_dir_create1/src/mypkg/: __init__.py
tmp_pytest/test_generate_readme_creates_f0/: README.md
tmp_pytest/test_generate_readme_lists_py_0/: README.md
tmp_pytest/test_get_pyproject_deps_depend0/: pyproject.toml
tmp_pytest/test_get_pyproject_deps_with_d0/: pyproject.toml
tmp_pytest/test_parse_spec_default_python0/: spec.md
tmp_pytest/test_parse_spec_dependencies0/: spec.md
tmp_pytest/test_parse_spec_doc_files0/: spec.md
tmp_pytest/test_parse_spec_doc_files_list0/: spec.md
tmp_pytest/test_parse_spec_doc_files_no_m0/: spec.md
tmp_pytest/test_parse_spec_doc_files_outs0/: spec.md
tmp_pytest/test_parse_spec_empty_dependen0/: spec.md
tmp_pytest/test_parse_spec_usage_fallback0/: spec.md
tmp_pytest/test_parse_spec_usage_fallback1/: spec.md
tmp_pytest/test_parse_spec_usage_fallback2/: spec.md
tmp_pytest/test_parse_spec_usage_fallback3/: spec.md
tmp_pytest/test_update_pyproject_tools_ap0/: pyproject.toml
tmp_pytest/test_update_pyproject_tools_sk0/: pyproject.toml
tmp_pytest/test_write_claude_md_contains_0/: CLAUDE.md
tmp_pytest/test_write_claude_md_fallback_0/: CLAUDE.md
tmp_pytest/test_write_claude_md_snake_cas0/: CLAUDE.md
tmp_pytest/test_write_claude_settings_has0/.claude/: settings.local.json
tmp_pytest/test_write_conftest_contains_f0/tests/: conftest.py
tmp_pytest/test_write_gitignore_creates_f0/: .gitignore
versions/: v0.1.0.json  v0.2.0.json  v0.3.0.json  v0.3.1.json  v1.0.0.json  v2.0.0.json  v2.1.0.json  v2.2.0.json
(+50 files in other folders)
