[project]
name = "vibegen"
version = "2.1.0"
description = "Cross-platform Python project generator powered by Claude Code."
authors = [
    { name = "Jeroen", email = "jeroen@vwageningen.com" }
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cli", "generator", "python", "claude", "llm"]
dependencies = ["requests>=2.0"]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/your/repo"

[project.scripts]
vibegen = "vibegen.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibegen = ["prompts/*.txt", "prompts/*.md", "templates/**/*.md"]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "mypy",
  "radon",
  "bandit",
  "vulture",
  "pip-audit",
  "requests",  # required for Ollama client and other tooling
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".claude", "tmp_pytest"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.per-file-ignores]
"src/vibegen/_scaffold.py" = ["E501"]  # template strings contain long markdown lines
"scripts/*.py" = ["E501"]  # script files are not subject to line-length checks

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --tb=short"

[tool.mypy]
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.radon]

[tool.uv.workspace]
members = [
    "test-output",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20260107",
    "bandit>=1.9",
    "vulture>=2.15",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
# radon configuration is done via CLI flags; this section exists for future tooling.

